# vaccel-grpc

./: Cargo.toml  build.rs
protos/: agent.proto  genop.proto  resources.proto  tensorflow.proto
protos/async/: agent.proto
protos/sync/: agent.proto
src/: agent.rs  agent_ttrpc.rs  error.rs  genop.rs  image.rs  profiling.rs  resources.rs  session.rs  tensorflow.rs  torch.rs
src/asynchronous/: agent.rs  agent_ttrpc.rs
src/sync/: agent.rs  agent_ttrpc.rs
