[package]
name = "protocols"
version = "0.3.5"
authors = [ "Babis Chalios <mail@bchalios.io>", 
            "Kostis Papazafeiropoulos <papazof@gmail.com>", 
            "Anastassios Nanos <ananos@nubificus.co.uk>",
            "George Pyrros <gpyrros@nubificus.co.uk>",
            "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition.workspace = true
license.workspace = true

[dependencies]
ttrpc.workspace = true
protobuf.workspace = true
async-trait.workspace = true

[build-dependencies]
ttrpc-codegen = "0.4.2"
